--- a/src/components/Home/Footer/Footer.css
+++ b/src/components/Home/Footer/Footer.css
@@ -1,7 +1,18 @@
 .footer-area{
-    /* background: url(../../../images/footer-bg1.jpg); */
-    background: lightgray;
+    background: url(../../../images/footer-bg1.jpg);
+    /* background: #f3f3f3; */
+    position: relative;
     background-size: cover;
+}
+.footer-area::before{
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4);
+    /* z-index: -1; */
 }
 
 .footer-area li{
@@ -23,3 +34,13 @@ a{
     background-color: #6ACECE ;
     color:white;
 }
+.cursor-pointer{
+    cursor: pointer;
+    font-size: 25px;
+    transition: all linear .5s;
+  }
+  
+.cursor-pointer:hover{
+    font-size: 20px;
+    color:red;
+  }
